--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Engine\Camera">
       <UniqueIdentifier>{eee714e3-197b-4adf-bbc8-8373be5aee92}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine\Primitives">
+      <UniqueIdentifier>{88880354-8300-446e-86bd-492b4b1e1014}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ThirdParty\imgui-docking\imgui.cpp">
@@ -86,6 +89,12 @@
     </ClCompile>
     <ClCompile Include="Code\Light.cpp">
       <Filter>Engine\Lights</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Plane.cpp">
+      <Filter>Engine\Primitives</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Sphere.cpp">
+      <Filter>Engine\Primitives</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -148,6 +157,12 @@
     </ClInclude>
     <ClInclude Include="Code\Light.h">
       <Filter>Engine\Lights</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Plane.h">
+      <Filter>Engine\Primitives</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Sphere.h">
+      <Filter>Engine\Primitives</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
